fix subscribe impl